--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
 			</div>
 		</div> <!-- contacts -->
 		<div class="container ">
-			<nav class="navbar avbar-expand navbar-light bg-white" >
-				<div class="navbar-brand">
-					<img src="images/logo.png" width="150">
+			<nav class="navbar navbar-expand-lg navbar-light bg-white" >
+				<div class="navbar-brand ">
+					<img src="images/logo.png">
 				</div> 
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarMenu" aria-controls="navbarMenu" aria-expanded="true" aria-label="Toggle navigation">
     				<span class="navbar-toggler-icon"></span>
  				 </button>						
 				<div class="collapse navbar-collapse " id="navbarMenu">
 					<ul class="navbar-nav mx-auto">
-						<li class="nav-item activ">
+						<li class="nav-item active">
 							<a href="#" class="nav-link">home<span class="sr-only"></span></a>
 						</li>
 						<li class="nav-item">
@@ -57,8 +57,8 @@
 		<div class="container-fluid">
 			<div id="carouselBanner" class="carousel slide" data-ride="carousel" >
 				<div class="carousel-inner">
-					<div class="carousel-item activ">
-						<img src="images/banner.png" class="d-block w-100" alt="first image" height="1341">
+					<div class="carousel-item active">
+						<img src="images/banner.png" class="d-block w-100 img-responsive" alt="first image">
 					</div>
 					<div class="carousel-item ">
 						<img src="images/banner.png" class="d-block w-100" alt="second image" data-holder-rendered="true">
@@ -67,14 +67,16 @@
 						<img src="images/banner.png" class="d-block w-100" alt="third image" data-holder-rendered="true">
 					</div>
 				</div>
+				<div class="row justify-content-between">
 				<a href="#carouselBanner" class="carousel-control-prev" role="button" data-slide="prev">
-					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+					<span class="carousel-control-prev-icon prev" aria-hidden="true"></span>
    					<span class="sr-only">Previous</span>
 				</a>
 				<a href="#carouselBanner" class="carousel-control-next" role="button" data-slide="next">
-					<span class="carousel-control-next-icon" aria-hidden="true"></span>
+					<span class="carousel-control-next-icon next" aria-hidden="true"></span>
    					<span class="sr-only">Next</span>
 				</a>
+				</div>
 				<div class="wrapper-choose">
 					<div  class="choose">
 
@@ -86,14 +88,14 @@
 			</div>  <!--carousel slide-->
 		</div>
 		<!--section about us-->
-		<div class="about-us">
-			<div class="container">
+		<div class="about-us ">
+			<div class="container section">
 				<div class="row ">
 					<div class="col-md-7 text-muted ">
 						<h3 class="headline"><small>what we are</small><br>about us</h3>
 						<p class="domine">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled
 						</p>
-						<button type="button" class="btn read-more">read more</button>
+						<a href="#" role="button" class="btn read-more">read more</a>
 					</div>
 					<div class="col-md-5 wrapper-badge">
 						<img src="images/about_us.png" class="img-responsive hidden-xs">
@@ -106,7 +108,7 @@
 		</div><!--section about us-->
 		<!--section steps-->
 		<div class="steps">
-			<div class="container-fluid ">
+			<div class="container-fluid section">
 				<div class="row">
 					<div class="container">
 						<div class="row">
@@ -146,11 +148,10 @@
 			</div>
 		</div><!--section steps-->
 		<!--section projects-->		
-		<div class="container projects">
+		<div class="container section projects">
 			<div class="row">
-				<div class="col-md-12">
-					<p>our</p>
-					<h3 class="headline">steps</h3>
+				<div class="col">
+					<h3 class="headline"><small>our</small><br>steps</h3>
 					<div class="row">
 						<div class="col-xs-12 col-md-6" style="height: 464px;">
 							<img src="images/project_banking.png" class="img-responsive hidden-xs">								
@@ -158,11 +159,12 @@
 						<div class="col-xs-12  col-md-6 ">
 							<div class="row" style="height: 222px;">
 								<div class="col-md-6">
-									<a href="">												<img src="images/project_2.png" class="img-responsive hidden-xs">
+									<a href="#">												
+										<img src="images/project_2.png" class="img-responsive hidden-xs">
 									</a>
 								</div>
 								<div class="col-md-6">
-									<a href="">
+									<a href="#">
 										<img src="images/project_technology.png" class="img-responsive hidden-xs">
 									</a>
 								</div>
@@ -172,14 +174,22 @@
 									<img src="images/project_real_estate.png" class="img-responsive hidden-xs"> 
 								</div>									
 							</div>
-						</div>			
-					</div> <!--row-->
+						</div>	
+					</div> <!--row with images-->
+					
 				</div>	
-			</div>
-			<button type="button" class="btn full-projects">full projects</button>	
+				<div class="w-100"></div>
+				<div class="col-2 mx-auto pt-5 mt-5">
+						<a href="#" role="button" class="btn full-projects">full projects</a>	
+					</div>	
+			</div><!--row-->
+			
+				
+			
+			
 		</div><!--section projects-->	
 		<!--section testimomials-->	
-		<div class="container-fluid testimomials py-5">
+		<div class="container-fluid testimomials section">
 			<div class="row">
 				<div class="container">
 					<div class="row">
@@ -221,7 +231,7 @@
 		<!--section our blog-->
 				<div class="container blog">
 					<div class="row ">
-						<div class="col-md-6">
+						<div class="col-md-6 section">
 							<h3 class="headline"><small>news</small><br>our blog</h3>
 							<a href="#">top posts</a>
 							<a href="#">check all post</a>
@@ -248,7 +258,7 @@
 				</div>	
 		
 			<!--contact us-->
-		<div class="container contact-us">
+		<div class="container contact-us section">
 			<div class="row">
 				<div class="col">
 					<h3 class="headline"><small>for consulting</small><br>contact us</h3>
@@ -274,7 +284,7 @@
 				<div class="row">
 					<div class="container">
 						<div class="row">
-							<div class="col">
+							<div class="col section">
 								<div class="row">
 									<div class="col-12 col-md-6 ">
 										<h2 class="footer__headline">news letter</h2>
