footers form is 'nowrap'

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
 									<div class="col-12 col-lg-6 ">
 										<h2 class="footer__headline text-uppercase font-weight-bold">news letter</h2>
 										<p class="domine footer__text">Enter your enail address to subscribe our notification<br>of our new post & features by enail</p>
-										<form class="form-inline footer__form">
+										<form class="form-inline d-flex flex-nowrap  footer__form">
 											<label class="justify-content-start">
 												<input type="email" name="email" class="form-control text-uppercase" placeholder="email address">
 											</label>
