section 'about us' was made

--- a/index.html
+++ b/index.html
@@ -159,17 +159,23 @@
 			</div>  <!--carousel slide-->
 		</div>
 		<!--section about us-->
-		<div class="container section">
+		<div class="container section about_us">
 			<div class="row ">
 				<div class="col-md-7 text-muted text-right">
-					<h3 class="headline"><small>what we are</small><br>about us</h3>
+					<h3 class="headline text-uppercase"><small>what we are</small><br>about us</h3>
 					<p class="domine">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled
 					</p>
-					<a href="#" role="button" class="btn read-more">read more</a>
+					<a href="#" role="button" class="btn text-uppercase">read more</a>
 				</div>
-				<div class="col-md-5 wrapper-badge">
+				<div class="col-md-5 badge">
 					<img src="images/about_us.png" class="img-responsive hidden-xs">
-					<div class="badge">
+					<div class="medal p-0">
+						<div>
+							<div></div>
+						</div>
+						<img class="mb-5" src="images/badge_icon.png" alt="Card image cap">
+						<h5 class="card-title">25</h5>
+						<p class="text-uppercase">year of exellence</p>
 						
 					</div>
 				</div>	
@@ -385,7 +391,7 @@
 											<label class="justify-content-start">
 												<input type="email" name="email" class="form-control text-uppercase" placeholder="email address">
 											</label>
-											<button type="submit" class="btn footer_btn" >subscribe</button>
+											<button type="submit" class="btn footer_btn text-uppercase">subscribe</button>
 										</form> 
 									</div>
 									<div class="col-4 col-lg-2">
