made section 'contact us'

--- a/index.html
+++ b/index.html
@@ -393,25 +393,27 @@
 			</div>	<!--row-->
 		</div>
 			<!--contact us-->
-		<div class="container contact-us section">
+		<div class="container section">
 			<div class="row">
-				<div class="col">
+				<div class="col-12  ">
 					<h3 class="headline text-uppercase"><small>for consulting</small><br>contact us</h3>
 				</div>
-				<div class="w-100"></div>
-				<div class="col align-self-center">
-					<object data="images/icon_email.svg" type="image/svg+xml"></object>
-					<p class="domine d-inline-block"><span>email</span><br>info@consultplus.com</p>
+			</div>	
+			<div class="row d-flex flex-sm-nowrap justify-content-between">
+				<div class="col-12 col-sm-4 d-flex flex-column flex-md-row justify-content-around align-items-center contact ">
+					<object data="images/icon_email.svg" type="image/svg+xml" ></object>
+					<p class="domine d-block"><span class="text-uppercase">email</span><br>info@consultplus.com</p>
 				</div>
-				<div class="col">
+				<div class="col-12 col-sm-4 d-flex flex-column flex-md-row justify-content-around align-items-center contact ">
 					<object data="images/icon_call.svg" type="image/svg+xml"></object>
-					<p class="domine"><span>call us</span><br>+9188798767990</p>	
+					<p class="domine d-block"><span class="text-uppercase">call us</span><br>+9188798767990</p>	
 				</div>
-				<div class="col">
+				<div class="col-12 col-sm-4 d-flex flex-column flex-md-row justify-content-around align-items-center contact ">
 					<object data="images/icon_career.svg" type="image/svg+xml"></object>
-					<p class="domine"><span>career</span><br>consult@career.com</p>	
+					<p class="domine d-block"><span class="text-uppercase">career</span><br>consult@career.com</p>	
 				</div>
 			</div>
+			
 		</div>
 		<!--footer-->
 		<div class="footer">
