links in footer

--- a/index.html
+++ b/index.html
@@ -399,18 +399,24 @@
 					<h3 class="headline text-uppercase"><small>for consulting</small><br>contact us</h3>
 				</div>
 			</div>	
-			<div class="row d-flex flex-sm-nowrap justify-content-between">
-				<div class="col-12 col-sm-4 d-flex flex-column flex-md-row justify-content-around align-items-center contact ">
-					<object data="images/icon_email.svg" type="image/svg+xml" ></object>
-					<p class="domine d-block"><span class="text-uppercase">email</span><br>info@consultplus.com</p>
+			<div class="row d-flex flex-md-nowrap justify-content-between">
+				<div class="col-12 col-md-4 contact ">
+					<div class="d-flex flex-md-column flex-lg-row justify-content-around align-items-center">
+						<object data="images/icon_email.svg" type="image/svg+xml" ></object>
+						<p class="domine d-block"><span class="text-uppercase">email</span><br>info@consultplus.com</p>
+					</div>
 				</div>
-				<div class="col-12 col-sm-4 d-flex flex-column flex-md-row justify-content-around align-items-center contact ">
-					<object data="images/icon_call.svg" type="image/svg+xml"></object>
-					<p class="domine d-block"><span class="text-uppercase">call us</span><br>+9188798767990</p>	
+				<div class="col-12 col-md-4 contact ">
+					<div class="d-flex flex-md-column flex-lg-row justify-content-around align-items-center">
+						<object data="images/icon_call.svg" type="image/svg+xml"></object>
+						<p class="domine d-block"><span class="text-uppercase">call us</span><br>+9188798767990</p>	
+					</div>
 				</div>
-				<div class="col-12 col-sm-4 d-flex flex-column flex-md-row justify-content-around align-items-center contact ">
-					<object data="images/icon_career.svg" type="image/svg+xml"></object>
-					<p class="domine d-block"><span class="text-uppercase">career</span><br>consult@career.com</p>	
+				<div class="col-12 col-md-4 contact ">
+					<div class="d-flex flex-md-column flex-lg-row justify-content-around align-items-center">
+						<object data="images/icon_career.svg" type="image/svg+xml"></object>
+						<p class="domine d-block"><span class="text-uppercase">career</span><br>consult@career.com</p>
+					</div>	
 				</div>
 			</div>
 			
@@ -424,7 +430,7 @@
 							<div class="col section">
 								<div class="row">
 									<div class="col-12 col-lg-6 ">
-										<h2 class="footer__headline text-uppercase font-weight-bold">news letter</h2>
+										<h3 class="headline footer__headline text-uppercase ">news letter</h3>
 										<p class="domine footer__text">Enter your enail address to subscribe our notification<br>of our new post & features by enail</p>
 										<form class="form-inline d-flex flex-nowrap  footer__form">
 											<label class="justify-content-start">
@@ -434,73 +440,32 @@
 										</form> 
 									</div>
 									<div class="col-4 col-lg-2">
-										<h2 class="footer__headline text-uppercase font-weight-bold">navigation</h2>
-										<ul class="nav nav-pills nav-stacked footer__text">
-												<li>
-													<a href="#">home</a>
-												</li>
-												<li>
-													<a href="#">about us</a>
-												</li>
-												<li>
-													<a href="#industry">industry</a>
-												</li>
-												<li>
-													<a href="#">services</a>
-												</li>
-												<li>
-													<a href="#">pages</a>
-												</li>
-												<li>
-													<a href="#">contact us</a>
-												</li>
-											</ul>
+										<h3 class="headline footer__headline text-uppercase">navigation</h3>
+										<a href="#" class="d-block text-uppercase">home</a>
+										<a href="#" class="d-block text-uppercase">about us</a>
+										<a href="#industry" class="d-block text-uppercase">industry</a>
+										<a href="#" class="d-block text-uppercase">services</a>
+										<a href="#" class="d-block text-uppercase">pages</a>
+										<a href="#" class="d-block text-uppercase">contact us</a>
+										
 									</div>
 									<div class="col-4 col-lg-2 ">
-										<h2 class="footer__headline text-uppercase font-weight-bold">industry</h2>
-										<ul class="nav nav-pills nav-stacked footer__text">
-												<li>
-													<a href="#">education</a>
-												</li>
-												<li>
-													<a href="#">business</a>
-												</li>
-												<li>
-													<a href="#industry">realestate</a>
-												</li>
-												<li>
-													<a href="#industry">tecnology</a>
-												</li>
-												<li>
-													<a href="#">banking</a>
-												</li>
-												<li>
-													<a href="#">telicommunication</a>
-												</li>
-												<li>
-													<a href="#">much more</a>
-												</li>
-											</ul>
+										<h3 class="headline footer__headline text-uppercase">industry</h3>
+										<a href="#" class="d-block text-uppercase">education</a>
+										<a href="#" class="d-block text-uppercase">business</a>
+										<a href="#" class="d-block text-uppercase">realestate</a>
+										<a href="#" class="d-block text-uppercase">tecnology</a>
+										<a href="#" class="d-block text-uppercase">banking</a>
+										<a href="#" class="d-block text-uppercase">telicommunication</a>
+										<a href="#" class="d-block text-uppercase">much more</a>
 									</div>
 									<div class="col-4 col-lg-2">
-										<h2 class="footer__headline text-uppercase font-weight-bold">follow us</h2>
-										<ul class="nav nav-pills nav-stacked footer__text">
-												<li>
-													<a href="#">facebook</a>
-												</li>
-												<li>
-													<a href="#">twitter</a>
-												</li>
-												<li>
-													<a href="#industry">instagram</a>
-												</li>
-												<li>
-													<a href="#">linkedin</a>
-												</li>
-												<li>
-													<a href="#">google +</a>
-												</li>
-											</ul>
+										<h3 class="headline footer__headline text-uppercase ">follow us</h3>
+										<a href="#" class="d-block text-uppercase">facebook</a>
+										<a href="#" class="d-block text-uppercase">twitter</a>
+										<a href="#" class="d-block text-uppercase">instagram</a>
+										<a href="#" class="d-block text-uppercase">linkedin</a>
+										<a href="#" class="d-block text-uppercase">google +</a>
 									</div>
 								</div>
 							</div> <!--col-->
