correction of broken code

--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
 			</div>	<!--row-->
 		</div>
 			<!--contact us-->
-		<div class="container section" id="contact>
+		<div class="container section" id="contact">
 			<div class="row">
 				<div class="col-12  ">
 					<h3 class="headline text-uppercase"><small>for consulting</small><br>contact us</h3>
