--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html>
 <head>
 	<title>page with bootstrap</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
 	<link rel='stylesheet' href='css/style.css' type='text/css'> 
-	
+
+	<link rel='stylesheet' href='css/media.css' type='text/css'>
+
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 	
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
@@ -63,8 +65,8 @@
 			</nav>
 		</div>
 	</div>	
-		<div class="container-fluid banner">
-			<div id="carouselBanner" class="carousel slide d-none d-md-block" data-ride="carousel" >
+		<div class="container-fluid  banner">
+			<div id="carouselBanner" class="carousel slide d-none d-md-block position-relative banner__carousel" data-ride="carousel" >
 				<div class="carousel-inner">
 					<div class="carousel-item active">
 						<img src="images/banner.png" class="d-block w-100 img-responsive" alt="first image">
@@ -76,18 +78,21 @@
 						<img src="images/banner.png" class="d-block w-100" alt="third image" data-holder-rendered="true">
 					</div>
 				</div>
-				<div class="row justify-content-between">
-				<a href="#carouselBanner" class="carousel-control-prev" role="button" data-slide="prev">
-					<span class="carousel-control-prev-icon prev" aria-hidden="true"></span>
-   					<span class="sr-only">Previous</span>
-				</a>
-				<a href="#carouselBanner" class="carousel-control-next" role="button" data-slide="next">
-					<span class="carousel-control-next-icon next" aria-hidden="true"></span>
-   					<span class="sr-only">Next</span>
-				</a>
+				<div class="row justify-content-between banner__switch w-100 mx-auto">
+					<a href="#carouselBanner" class="carousel-control-prev d-block text-left" role="button" data-slide="prev">
+						<span class="carousel-control-prev-icon prev " aria-hidden="true"></span>
+	   					<span class="sr-only">Previous</span>
+					</a>
+					<a href="#carouselBanner" class="carousel-control-next d-block text-right"  role="button" data-slide="next">
+						<span class="carousel-control-next-icon next" aria-hidden="true"></span>
+	   					<span class="sr-only">Next</span>
+					</a>
 				</div>
 			</div>  <!--carousel slide-->
-			<div class="card" id="industry">
+		</div>
+		 <!--industry-->
+		<div class="container position-relative d-flex align-items-end" id="industry">
+				<div class="col-10 col-md-5 card d-block " >
 					<div  class="card-header pl-4 d-flex align-items-center">
 						<div>
 							<h5 class="card-subtitle text-uppercase">we are leding consulting company</h5>
@@ -96,10 +101,10 @@
 					</div>
 					<div  class="card-body d-flex align-items-stretch px-0 py-0">
 						<div class="d-flex flex-row flex-wrap align-content-stretch border-right align-items-stretch w-50" >
-							<div class="border-bottom w-100 px-4 my-0 card__item">
+							<div class="border-bottom w-100 px-1 px-sm-4 px-md-2 px-lg-4 my-0 card__item">
 								<div>
 							    	<img src="images/icon_education.png">
-							    	<div class="d-flex justify-content-between">
+							    	<div class="d-flex flex-md-column flex-lg-row justify-content-between">
 								    	<h5 class="text-uppercase">education</h5>
 								    	<a href="#" class="">
 								    		<object data="images/arrow.svg" type="image/svg+xml"></object>
@@ -107,10 +112,10 @@
 									</div>
 								</div>
 							</div>   
-						    <div class=" border-bottom w-100 px-4 my-0 card__item">
+						    <div class=" border-bottom w-100 px-1 px-sm-4 px-md-2 px-lg-4 my-0 card__item ">
 						    	<div>
 							    	<img src="images/icon_technology.png" >
-							    	<div class="d-flex justify-content-between">
+							    	<div class="d-flex flex-md-column flex-lg-row justify-content-between">
 							    		<h5 class="text-uppercase">technology</h5>
 							    		<a href="#">
 								    		<object data="images/arrow.svg" type="image/svg+xml"></object>
@@ -118,10 +123,10 @@
 									</div>
 								</div>
 						    </div>
-						    <div class="w-100 px-4 my-0 card__item">
+						    <div class="w-100 px-1 px-sm-4 px-md-2 px-lg-4 my-0 card__item">
 						    	<div>
 							    	<img src="images/icon_banking.png" >
-							    	<div class="d-flex justify-content-between">
+							    	<div class="d-flex flex-md-column flex-lg-row justify-content-between">
 								    	<h5 class="text-uppercase">banking</h5>
 								    	<a href="#">
 								    		<object data="images/arrow.svg" type="image/svg+xml"></object>
@@ -131,10 +136,10 @@
 						    </div>
 						</div>
 						<div class="d-flex flex-row flex-wrap w-50 ">
-							<div class="border-bottom w-100 px-4 card__item">
+							<div class="border-bottom w-100 px-1 px-sm-4 px-md-2 px-lg-4 card__item">
 								<div>
 							    	<img src="images/icon_business.png">
-							    	<div class="d-flex justify-content-between">
+							    	<div class="d-flex flex-md-column flex-lg-row justify-content-between">
 							    		<h5 class="text-uppercase">business</h5>
 							    		<a href="#">
 								    		<object data="images/arrow.svg" type="image/svg+xml"></object>
@@ -142,10 +147,10 @@
 							    	</div>
 							    </div>
 							</div>   
-						    <div class="border-bottom w-100 px-4 card__item">
+						    <div class="border-bottom w-100 px-1 px-sm-4 px-md-2 px-lg-4 card__item">
 						    	<div>
 							    	<img src="images/icon_real_estate.png" >
-							    	<div class="d-flex justify-content-between">
+							    	<div class="d-flex flex-md-column flex-lg-row justify-content-between">
 								    	<h5 class="text-uppercase">real estate</h5>
 								    	<a href="#">
 								    		<object data="images/arrow.svg" type="image/svg+xml"></object>
@@ -153,15 +158,15 @@
 									</div>
 								</div>
 						    </div>
-						    <div class="w-100 px-4 card__item">
-						    	<div>
-						    		<a href="#" class="btn text-uppercase align-middle">view more</a>
+						    <div class="w-100 px-1 px-sm-4 px-md-2 px-lg-4 card__item">
+						    	<div >
+						    		<a href="#" class="btn text-uppercase d-block align-middle">view more</a>
 						    	</div>
 						    </div>
 						</div>
 					</div>
 				</div>
-		</div>
+		</div> <!--container-->
 		<!--section about us-->
 		<div class="container section about_us" id="about">
 			<div class="row ">
@@ -228,9 +233,9 @@
 			<div class="row"> 
 				<div class="col-12 col-lg-6 mb-3 mb-lg-0" >
 					<div class="d-flex justify-content-center" >
-						<div class="position-relative">
+						<div class="position-relative ">
 							<a href="#" class="">
-								<img src="images/project_banking.png" class="img-fluid projects__img_1">	
+								<img src="images/project_banking.png" class="img-fluid projects__img_1 ">	
 							</a>	
 							<div class="position-absolute text-uppercase text-center img__text">banking</div>
 							<div class="projects__marker position-absolute "></div>	
@@ -304,7 +309,7 @@
 					<div class="row">
 						<div class="col-12 slider d-flex flex-nowrap">
 							<div class="w-25 d-inline-block m-0">
-								<input type="radio" name="point" id="slide1" class="d-none" checked onclick="color">
+								<input type="radio" name="point" id="slide1" class="d-none" checked onclick="color()">
 								<div class="d-flex flex-column align-items-center flex-lg-row">
 									<label for="slide1" >
 										<img src="images/client_1.png" class=" rounded-circle">
@@ -324,8 +329,8 @@
 									<div class="col-1 d-none d-lg-block">
 										<object data="images/icon_quote1.svg" type="image/svg+xml"></object>
 									</div>
-								</div>
-							</div> <!--slider__item-->
+								</div><!--slider__item-->
+							</div> 
 							<div class="w-25 d-inline-block m-0">
 								<input type="radio" name="point" id="slide2" class="d-none">
 								<div class="d-flex flex-column align-items-center flex-lg-row">
@@ -403,17 +408,23 @@
 							</div>
 							<div>
 								<p class="domine mt-4">February <span>20, 2016</span></p>
-								<h3 class="text-uppercase blog__heading">blog heading here business</h3>
+								<button class="blog__btn">
+									<h3 class="text-uppercase blog__heading">blog heading here business</h3>
+								</button>
 								<p class="domine text-muted d-block blog__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
 							</div>
 							<div>
 								<p class="domine mt-4">February <span>22, 2016</span></p>
-								<h3 class="text-uppercase blog__heading">many variation of passages of ipsum</h3>
+								<button class="blog__btn">
+									<h3 class="text-uppercase blog__heading">many variation of passages of ipsum</h3>
+								</button>
 								<p class="domine text-muted blog__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
 							</div>
 							<div>
 								<p class="domine mt-4">February <span>22, 2016</span></p>
-								<h3 class="text-uppercase blog__heading">internet tend to repeat predefined</h3>
+								<button class="blog__btn">
+									<h3 class="text-uppercase blog__heading">internet tend to repeat predefined</h3>
+								</button>
 								<p class="domine text-muted blog__text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
 							</div>
 						</div>
@@ -512,7 +523,9 @@
 		</div> <!--footer-->
 	</div>
 	<script type="text/javascript">
-	
+		function color() {
+			
+		}
 		
 	</script>
 </body>
