--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
 			</div>  <!--carousel slide-->
 		</div>
 		 <!--industry-->
-		<div class="container position-relative d-flex flex-column justify-content-end" id="industry">
+		<div class="container-fluid container-md position-relative" id="industry">
 			<div class="row ">
-				<div class="col-10 col-md-6 col-lg-5 card d-block " >
+				<div class="col-12 col-md-6 col-lg-5 card d-block " >
 					<div  class="card-header pl-4 d-flex align-items-center">
 						<div>
 							<h5 class="card-subtitle text-uppercase">we are leding consulting company</h5>
@@ -526,13 +526,6 @@
 			</div>
 		</div> <!--footer-->
 	</div>
-	<script type="text/javascript">
-		var contacts = $('.contacts').height();
-		var navig = $('.navig').height();
-		
-
-		console.log(contacts);
-		console.log(navig);
-	</script>
+	
 </body>
 </html>
