--- a/index.html
+++ b/index.html
@@ -33,40 +33,40 @@
 				</div> 
 			</div>
 		</div> <!-- contacts -->
-	<div class="container-fluid navig">
-		<div class="container">
-			<nav class="navbar navbar-expand-lg navbar-light bg-white " >
-				<div class="navbar-brand ">
-					<img src="images/logo.png">
-				</div> 
-				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarMenu" aria-controls="navbarMenu" aria-expanded="true" aria-label="Toggle navigation">
-    				<span class="navbar-toggler-icon"></span>
- 				 </button>						
-				<div class="collapse navbar-collapse justify-content-end text-uppercase" id="navbarMenu">
-					<ul class="navbar-nav  bg-white text-center">
-						<li class="nav-item active">
-							<a href="#" class="nav-link">home<span class="sr-only"></span></a>
-						</li>
-						<li class="nav-item">
-							<a href="#about" class="nav-link">about us</a>
-						</li>
-						<li class="nav-item">
-							<a href="#industry" class="nav-link">industry</a>
-						</li>
-						<li class="nav-item">
-							<a href="#" class="nav-link">services</a>
-						</li>
-						<li class="nav-item">
-							<a href="#" class="nav-link">pages</a>
-						</li>
-						<li class="nav-item">
-							<a href="#contact" class="nav-link">contact us</a>
-						</li>
-					</ul> 
-				</div>
-			</nav>
-		</div>
-	</div>	
+		<div class="container-fluid navig">
+			<div class="container">
+				<nav class="navbar navbar-expand-lg navbar-light bg-white " >
+					<div class="navbar-brand ">
+						<img src="images/logo.png">
+					</div> 
+					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarMenu" aria-controls="navbarMenu" aria-expanded="true" aria-label="Toggle navigation">
+	    				<span class="navbar-toggler-icon"></span>
+	 				 </button>						
+					<div class="collapse navbar-collapse justify-content-end text-uppercase" id="navbarMenu">
+						<ul class="navbar-nav  bg-white text-center">
+							<li class="nav-item active">
+								<a href="#" class="nav-link">home<span class="sr-only"></span></a>
+							</li>
+							<li class="nav-item">
+								<a href="#about" class="nav-link">about us</a>
+							</li>
+							<li class="nav-item">
+								<a href="#industry" class="nav-link">industry</a>
+							</li>
+							<li class="nav-item">
+								<a href="#" class="nav-link">services</a>
+							</li>
+							<li class="nav-item">
+								<a href="#" class="nav-link">pages</a>
+							</li>
+							<li class="nav-item">
+								<a href="#contact" class="nav-link">contact us</a>
+							</li>
+						</ul> 
+					</div>
+				</nav>
+			</div>
+		</div>	
 		<div class="container-fluid  banner">
 			<div id="carouselBanner" class="carousel slide d-none d-md-block position-relative banner__carousel" data-ride="carousel" >
 				<div class="carousel-inner">
@@ -93,79 +93,81 @@
 			</div>  <!--carousel slide-->
 		</div>
 		 <!--industry-->
-		<div class="container-fluid container-md position-relative" id="industry">
-			<div class="row ">
-				<div class="col-12 col-md-6 col-lg-5 card d-block " >
-					<div  class="card-header pl-4 d-flex align-items-center">
-						<div>
-							<h5 class="card-subtitle text-uppercase">we are leding consulting company</h5>
-							<h4 class="card-title text-uppercase">choose your industry</h4>
+		<div class="container-fluid position-relative" id="industry">
+			<div class="container">
+				<div class="row ">
+					<div class="col-12 col-md-6 col-lg-5 card d-block " >
+						<div  class="card-header pl-4 d-flex align-items-center">
+							<div>
+								<h5 class="card-subtitle text-uppercase">we are leding consulting company</h5>
+								<h4 class="card-title text-uppercase">choose your industry</h4>
+							</div>
 						</div>
-					</div>
-					<div  class="card-body d-flex align-items-stretch px-0 py-0">
-						<div class="d-flex flex-row flex-wrap align-content-stretch border-right align-items-stretch w-50" >
-							<div class="border-bottom w-100 px-1 px-sm-4 px-md-2 px-lg-4 my-0 card__item">
-								<div>
-							    	<img src="images/icon_education.png">
-							    	<div class="d-flex flex-lg-row justify-content-between">
-								    	<h5 class="text-uppercase">education</h5>
-								    	<a href="#" class="">
-								    		<object data="images/arrow.svg" type="image/svg+xml"></object>
-										</a>
+						<div  class="card-body d-flex align-items-stretch px-0 py-0">
+							<div class="d-flex flex-row flex-wrap align-content-stretch border-right align-items-stretch w-50" >
+								<div class="border-bottom w-100 px-1 px-sm-4 px-md-2 px-lg-4 my-0 card__item">
+									<div>
+								    	<img src="images/icon_education.png">
+								    	<div class="d-flex flex-lg-row justify-content-between">
+									    	<h5 class="text-uppercase">education</h5>
+									    	<a href="#" class="">
+									    		<object data="images/arrow.svg" type="image/svg+xml"></object>
+											</a>
+										</div>
 									</div>
-								</div>
-							</div>   
-						    <div class=" border-bottom w-100 px-1 px-sm-4 px-md-2 px-lg-4 my-0 card__item ">
-						    	<div>
-							    	<img src="images/icon_technology.png" >
-							    	<div class="d-flex flex-lg-row justify-content-between">
-							    		<h5 class="text-uppercase">technology</h5>
-							    		<a href="#">
-								    		<object data="images/arrow.svg" type="image/svg+xml"></object>
-										</a>
+								</div>   
+							    <div class=" border-bottom w-100 px-1 px-sm-4 px-md-2 px-lg-4 my-0 card__item ">
+							    	<div>
+								    	<img src="images/icon_technology.png" >
+								    	<div class="d-flex flex-lg-row justify-content-between">
+								    		<h5 class="text-uppercase">technology</h5>
+								    		<a href="#">
+									    		<object data="images/arrow.svg" type="image/svg+xml"></object>
+											</a>
+										</div>
 									</div>
-								</div>
-						    </div>
-						    <div class="w-100 px-1 px-sm-4 px-md-2 px-lg-4 my-0 card__item">
-						    	<div>
-							    	<img src="images/icon_banking.png" >
-							    	<div class="d-flex flex-lg-row justify-content-between">
-								    	<h5 class="text-uppercase">banking</h5>
-								    	<a href="#">
-								    		<object data="images/arrow.svg" type="image/svg+xml"></object>
-										</a>
+							    </div>
+							    <div class="w-100 px-1 px-sm-4 px-md-2 px-lg-4 my-0 card__item">
+							    	<div>
+								    	<img src="images/icon_banking.png" >
+								    	<div class="d-flex flex-lg-row justify-content-between">
+									    	<h5 class="text-uppercase">banking</h5>
+									    	<a href="#">
+									    		<object data="images/arrow.svg" type="image/svg+xml"></object>
+											</a>
+										</div>
 									</div>
-								</div>
-						    </div>
-						</div>
-						<div class="d-flex flex-row flex-wrap w-50 ">
-							<div class="border-bottom w-100 px-1 px-sm-4 px-md-2 px-lg-4 card__item">
-								<div>
-							    	<img src="images/icon_business.png">
-							    	<div class="d-flex flex-lg-row justify-content-between">
-							    		<h5 class="text-uppercase">business</h5>
-							    		<a href="#">
-								    		<object data="images/arrow.svg" type="image/svg+xml"></object>
-										</a>
+							    </div>
+							</div>
+							<div class="d-flex flex-row flex-wrap w-50 ">
+								<div class="border-bottom w-100 px-1 px-sm-4 px-md-2 px-lg-4 card__item">
+									<div>
+								    	<img src="images/icon_business.png">
+								    	<div class="d-flex flex-lg-row justify-content-between">
+								    		<h5 class="text-uppercase">business</h5>
+								    		<a href="#">
+									    		<object data="images/arrow.svg" type="image/svg+xml"></object>
+											</a>
+								    	</div>
+								    </div>
+								</div>   
+							    <div class="border-bottom w-100 px-1 px-sm-4 px-md-2 px-lg-4 card__item">
+							    	<div>
+								    	<img src="images/icon_real_estate.png" >
+								    	<div class="d-flex flex-lg-row justify-content-between">
+									    	<h5 class="text-uppercase">real estate</h5>
+									    	<a href="#">
+									    		<object data="images/arrow.svg" type="image/svg+xml"></object>
+											</a>
+										</div>
+									</div>
+							    </div>
+							    <div class="w-100 px-1 px-sm-4 px-md-2 px-lg-4 card__item">
+							    	<div >
+							    		<a href="#" class="btn text-uppercase d-block align-middle">view more</a>
 							    	</div>
 							    </div>
-							</div>   
-						    <div class="border-bottom w-100 px-1 px-sm-4 px-md-2 px-lg-4 card__item">
-						    	<div>
-							    	<img src="images/icon_real_estate.png" >
-							    	<div class="d-flex flex-lg-row justify-content-between">
-								    	<h5 class="text-uppercase">real estate</h5>
-								    	<a href="#">
-								    		<object data="images/arrow.svg" type="image/svg+xml"></object>
-										</a>
-									</div>
-								</div>
-						    </div>
-						    <div class="w-100 px-1 px-sm-4 px-md-2 px-lg-4 card__item">
-						    	<div >
-						    		<a href="#" class="btn text-uppercase d-block align-middle">view more</a>
-						    	</div>
-						    </div>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -181,7 +183,7 @@
 					<a href="#" role="button" class="btn text-uppercase">read more</a>
 				</div>
 				<div class="col-md-5 badge d-none d-sm-block">
-					<img src="images/about_us.png" class="img-responsive hidden-xs">
+					<img src="images/about_us.png" class="img-fluid">
 					<div class="medal p-0">
 						<div>
 							<div></div>
@@ -479,10 +481,8 @@
 									<div class="col-12 col-lg-6 ">
 										<h3 class="headline footer__headline text-uppercase ">news letter</h3>
 										<p class="domine footer__text">Enter your enail address to subscribe our notification<br>of our new post & features by enail</p>
-										<form class="form-inline d-flex flex-nowrap  footer__form">
-											<label class="justify-content-start">
-												<input type="email" name="email" class="form-control text-uppercase" placeholder="email address">
-											</label>
+										<form class="form-inline d-flex flex-nowrap justify-content-between footer__form">
+											<input type="email" name="email" class="form-control text-uppercase" placeholder="email address">
 											<button type="submit" class="btn footer__btn text-uppercase">subscribe</button>
 										</form> 
 									</div>
